--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "my portfolio for client and to get work",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app"
+    "dev": "node app"
   },
   "author": "markhan prasetiyo",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
+    "child_process": "^1.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
